--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,24 @@
     <title>首页</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" href="./css/me.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
+    <style>
+        #github svg{
+            transition: all 1s;
+            fill: #222;
+            color: #fff;
+            position: absolute;
+            top: 0;
+            right: 0;
+            border: 0;
+            width: 80px;
+            height: 80px;
+        }
+        #github:hover svg {
+            width: 160px;
+            height: 160px;
+        }
+    </style>
 </head>
 <body>
     <!--导航-->
@@ -371,8 +389,13 @@
             <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 T_i_m_e LaoZhang by Laozhang</p>
         </div>
     </footer>
-
+    <div id="live2d-widget" class="live2d-widget-container" style="position: fixed; right: 0px; bottom: -20px;
+    width: 200px; height: 400px; z-index: 99999; opacity: 1; pointer-events: none;">
+        <canvas id="live2dcanvas" width="400" height="800" style="position: absolute; right: 0px; top: 0px; width: 200px; height: 400px;"></canvas>
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/athlonreg/athlonreg.github.io/js/search.js"></script>
+<script src="./js/autoload.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 <script>
     $('.menu.toggle').click(function () {
