--- a/static/index.html
+++ b/static/index.html
@@ -389,9 +389,18 @@
             <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 T_i_m_e LaoZhang by Laozhang</p>
         </div>
     </footer>
-    <div id="live2d-widget" class="live2d-widget-container" style="position: fixed; right: 0px; bottom: -20px;
-    width: 200px; height: 400px; z-index: 99999; opacity: 1; pointer-events: none;">
-        <canvas id="live2dcanvas" width="400" height="800" style="position: absolute; right: 0px; top: 0px; width: 200px; height: 400px;"></canvas>
+    <div id="waifu" style="bottom: 0px;">
+        <div id="waifu-tips" class="">鼠…鼠标放错地方了！</div>
+        <canvas id="live2d" width="800" height="800"></canvas>
+        <div id="waifu-tool">
+            <span class="fa fa-lg fa-comment"></span>
+            <span class="fa fa-lg fa-paper-plane"></span>
+            <span class="fa fa-lg fa-user-circle"></span>
+            <span class="fa fa-lg fa-street-view"></span>
+            <span class="fa fa-lg fa-camera-retro"></span>
+            <span class="fa fa-lg fa-info-circle"></span>
+            <span class="fa fa-lg fa-times"></span>
+        </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/athlonreg/athlonreg.github.io/js/search.js"></script>
